--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,68 @@
-name: Deploy to Firebase
+name: Deploy to Firebase Hosting
 
 on:
   push:
     branches:
-      - main # Or your main branch name
+      - main # Or your main deployment branch
 
 jobs:
-  deploy:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4 # Use latest version
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          node-version: "18" # Specify Node.js version
+          cache: 'npm' # Cache npm dependencies
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci # Use ci for cleaner installs in CI/CD
 
+      # Add environment variables needed for the build process
+      # Ensure these are configured as secrets in your GitHub repository settings
       - name: Build project
-        run: npm run build
+        run: |
+          # Export NEXT_PUBLIC variables needed during build time
+          export NEXT_PUBLIC_FIREBASE_API_KEY=${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
+          export NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
+          export NEXT_PUBLIC_FIREBASE_PROJECT_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECT_ID }}
+          export NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
+          export NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
+          export NEXT_PUBLIC_FIREBASE_APP_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
+          export NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID }}
 
-      - name: Deploy to Firebase
+          npm run build
+        env:
+          # These secrets need to be added to your GitHub repository settings
+          # Go to Settings > Secrets and variables > Actions > New repository secret
+          NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
+          NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
+          NEXT_PUBLIC_FIREBASE_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECT_ID }}
+          NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
+          NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
+          NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
+          NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID }}
+          # Add other build-time environment variables if necessary
+
+      # Deploy to Firebase Hosting
+      # This step requires FIREBASE_TOKEN secret to be configured in GitHub Actions
+      # You can generate a token using `firebase login:ci`
+      - name: Deploy to Firebase Hosting
         run: |
           npm install -g firebase-tools
-          firebase deploy --token ${{ secrets.FIREBASE_TOKEN }} --non-interactive
+          firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }} --non-interactive
+        env:
+          # Ensure FIREBASE_TOKEN is set in your GitHub repository secrets
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+
+      # Optional: Deploy Firebase Functions if they changed
+      # - name: Deploy Firebase Functions
+      #   run: firebase deploy --only functions --token ${{ secrets.FIREBASE_TOKEN }} --non-interactive
+      #   env:
+      #     FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      #     # Add GOOGLE_APPLICATION_CREDENTIALS if needed by functions during deployment/runtime
+      #     # GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}
