--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-
 # Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
@@ -29,13 +28,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "18" # Specify Node.js version
           cache: 'npm'
+
       - name: Install dependencies
         run: npm ci
+
       - name: Build project for static export
         run: |
           export NEXT_PUBLIC_FIREBASE_API_KEY=${NEXT_PUBLIC_FIREBASE_API_KEY:-AIzaSyDT4-R0H8uydAqzrTsHfMKLXQ59p7u67Ho}
@@ -60,10 +62,16 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v4 # Updated to v4
+        uses: actions/upload-pages-artifact@v4
         with:
-          path: './out'
+          path: './out' # Ensure this matches your build output directory
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
