--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
         uses: actions/configure-pages@v5
 
       - name: Upload artifact
-  uses: actions/upload-pages-artifact@v1
+  uses: actions/upload-pages-artifact@latest
         with:
           path: './out' # Ensure this matches your build output directory
 
